Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2911

After upgrading from 1.8.9 to master, hit ASSERTION( seq != ((void *)0) ) failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.4.0
    • Lustre 2.4.0
    • Before upgrade servers are running 1.8.9 RHEL5; two clients are running 1.8.9 RHEL6; one client is running 1.8.9 RHEL5

      After upgrade both servers and clients are running lustre-master build# 1280 RHEL6
    • 3
    • 7004

      After upgrading the system from 1.8.9 to 2.4, one of the client hit LBUG:

      Lustre: DEBUG MARKER: Using TIMEOUT=20
      Lustre: DEBUG MARKER: ===== Check the directories/files in the OST pool
      Lustre: DEBUG MARKER: ===== Pass
      Lustre: DEBUG MARKER: ===== Check Lustre quotas usage/limits
      Lustre: DEBUG MARKER: cancel_lru_locks mdc start
      Lustre: DEBUG MARKER: cancel_lru_locks osc start
      Lustre: DEBUG MARKER: cancel_lru_locks mdc start
      Lustre: DEBUG MARKER: cancel_lru_locks osc start
      Lustre: DEBUG MARKER: cancel_lru_locks mdc start
      Lustre: DEBUG MARKER: cancel_lru_locks osc start
      Lustre: DEBUG MARKER: cancel_lru_locks mdc start
      Lustre: DEBUG MARKER: cancel_lru_locks osc start
      Lustre: DEBUG MARKER: cancel_lru_locks mdc start
      Lustre: DEBUG MARKER: cancel_lru_locks osc start
      Lustre: DEBUG MARKER: cancel_lru_locks mdc start
      Lustre: DEBUG MARKER: cancel_lru_locks osc start
      Lustre: DEBUG MARKER: ===== Verify the data
      LustreError: 9327:0:(fid_request.c:329:seq_client_alloc_fid()) ASSERTION( seq != ((void *)0) ) failed: 
      LustreError: 9327:0:(fid_request.c:329:seq_client_alloc_fid()) LBUG
      Pid: 9327, comm: mkdir
      
      Call Trace:
       [<ffffffffa0371895>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]
       [<ffffffffa0371e97>] lbug_with_loc+0x47/0xb0 [libcfs]
       [<ffffffffa080bea9>] seq_client_alloc_fid+0x379/0x440 [fid]
       [<ffffffffa03822e1>] ? libcfs_debug_msg+0x41/0x50 [libcfs]
       [<ffffffffa082470b>] mdc_fid_alloc+0xbb/0xf0 [mdc]
       [<ffffffffa0832b1c>] mdc_create+0xcc/0x780 [mdc]
       [<ffffffffa09c487b>] ll_new_node+0x19b/0x6a0 [lustre]
       [<ffffffffa09c50a7>] ll_mkdir+0x97/0x1f0 [lustre]
       [<ffffffff8120db8f>] ? security_inode_permission+0x1f/0x30
       [<ffffffff811833f7>] vfs_mkdir+0xa7/0x100
       [<ffffffff8118656e>] sys_mkdirat+0xfe/0x120
       [<ffffffff810d3d27>] ? audit_syscall_entry+0x1d7/0x200
       [<ffffffff811865a8>] sys_mkdir+0x18/0x20
       [<ffffffff8100b072>] system_call_fastpath+0x16/0x1b
      
      Kernel panic - not syncing: LBUG
      Pid: 9327, comm: mkdir Not tainted 2.6.32-279.19.1.el6.x86_64 #1
      Call Trace:
       [<ffffffff814e9541>] ? panic+0xa0/0x168
       [<ffffffffa0371eeb>] ? lbug_with_loc+0x9b/0xb0 [libcfs]
       [<ffffffffa080bea9>] ? seq_client_alloc_fid+0x379/0x440 [fid]
       [<ffffffffa03822e1>] ? libcfs_debug_msg+0x41/0x50 [libcfs]
       [<ffffffffa082470b>] ? mdc_fid_alloc+0xbb/0xf0 [mdc]
       [<ffffffffa0832b1c>] ? mdc_create+0xcc/0x780 [mdc]
       [<ffffffffa09c487b>] ? ll_new_node+0x19b/0x6a0 [lustre]
       [<ffffffffa09c50a7>] ? ll_mkdir+0x97/0x1f0 [lustre]
       [<ffffffff8120db8f>] ? security_inode_permission+0x1f/0x30
       [<ffffffff811833f7>] ? vfs_mkdir+0xa7/0x100
       [<ffffffff8118656e>] ? sys_mkdirat+0xfe/0x120
       [<ffffffff810d3d27>] ? audit_syscall_entry+0x1d7/0x200
       [<ffffffff811865a8>] ? sys_mkdir+0x18/0x20
       [<ffffffff8100b072>] ? system_call_fastpath+0x16/0x1b
      Initializing cgroup subsys cpuset
      Initializing cgroup subsys cpu
      

            emoly.liu Emoly Liu
            sarah Sarah Liu
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: